app/styles/main.scss
// bower:scss
@import "foundation/scss/foundation.scss";
// endbower

/* Fonts */
@font-face {
  font-family: 'Jaapokki';
  src: url('../fonts/jaapokki/jaapokki-regular.eot'); /* IE9 Compat Modes */
  src: url('../fonts/jaapokki/jaapokki-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/jaapokki/jaapokki-regular.woff') format('woff'), /* Pretty Modern Browsers */
       url('../fonts/jaapokki/jaapokki-regular.ttf')  format('truetype'), /* Safari, Android, iOS */
       url('../fonts/jaapokki/jaapokki-regular.svg#svgFontName') format('svg'); /* Legacy iOS */
}

/* Override the nav bar */
form.contact input, form.contact textarea {
	background-color: transparent;
	color: rgb(255,255,255);
}

form.contact input:focus, form.contact textarea:focus {
	background-color: rgb(49,49,49);
	box-shadow: 0 0 5px rgb(101,101,101);
}

.fixed {
	background-color: rgba(255,255,255,1);
}

.top-bar {
	background-color: transparent;
	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
	-webkit-transition: height 0.3s;
    -moz-transition: height 0.3s;
    -ms-transition: height 0.3s;
    -o-transition: height 0.3s;
    transition: height 0.3s;
}

.top-bar .name h1 a {
	font-family: 'Jaapokki', Fallback, sans-serif;
	font-size: 35px;
	color: rgb(7,79,103);
	letter-spacing: -7px;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

.top-bar-section ul li {
	margin: 0 20px;
	background-color: transparent;
}

.top-bar-section li:not(.has-form) a:not(.button) {
	background-color: rgba(255,255,255,1);
	font-size: 1.0rem;
	color: rgb(52,56,56);
	-webkit-transition: line-height 0.3s;
    -moz-transition: line-height 0.3s;
    -ms-transition: line-height 0.3s;
    -o-transition: line-height 0.3s;
    transition: line-height 0.3s;
}

.large {
	background-color: rgb(51,153,204);
}

.large .top-bar {
	height: 75px;
	box-shadow: 0 0 rgba(0,0,0,.1);
}

.large .top-bar .name h1 a {
	font-size: 65px;
	line-height: 85px;
	letter-spacing: -11px;
	color: rgb(255,255,255);
}

.large .top-bar-section li:not(.has-form) a:not(.button) {
	background-color: rgb(51,153,204);
	line-height: 75px;
	color: rgb(255,255,255);
}

/* General styles */
body {
	background-color: rgb(51,153,204);
}

body > section {
	position: relative;
	padding: 50px 0;
	z-index: 2;
}

nav {
	/* margin: 0 10%; */
}

footer {
	background-color: rgb(47,47,47);
	position: fixed;
	bottom: 0;
	padding: 30px 0;
	width: 100%;
}

footer > div {
	padding: 0 20px;
}

h3 {
	color: rgb(7,79,103);
}

p {
	color: rgb(142,142,143);
}

small {
	font-size: 65%;
}

#landing {
	background-color: rgb(51,153,204);
	height: 100vh;
}

#landing #lead_heading {
	line-height: 1;
	font-size: 5.4rem;
}

#landing #lead_subheading {
	margin-top: 20px;
}

#landing #lead_options {
	margin-top: 20px;
}

#landing #lead_options ul {
	max-width: 560px;
}

#landing #lead_options div {
	margin-right: 7px;
}

#landing #lead_options li {
	min-width: 245px;
}

#landing #lead_img_cntr {
	position: absolute;
	right: 0;
	top: 0;
}

#landing #lead_img_cntr img {
	margin-top: 40px;
	margin-left: 120px;
}

#landing #arrows_cntr {
	position: absolute;
	bottom: 70px;
	left: 48%;
}

#quote {
	background-color: rgb(97,231,205);
	padding: 10px 0; /* Override the other padding as it is too big for this section */
}

#skills {
	background-color: rgb(255,255,255);
}

#skills #skills_leading_txt {
	padding-bottom: 50px;
}

#skills #skills_cntr {
	margin-bottom: 20px;
}

#skills #skills_cntr #skills_panel_cntr {
	/* border-right: gray 3px solid; */
	padding-top: 10px;
	padding-left: 38px;
	padding-right: 45px;
}

#skills #skills_cntr  #skills_panel_cntr .panel{
	padding-top: 40px;
	padding-bottom: 40px;
}

#skills #skills_cntr #skills_chart_cntr {
	/* padding-left: 38px; */
	padding-top: 5%;
}

#skills #skills_cntr #skills_chart_cntr #chart_txt_cntr {
	position: absolute;
	width: 100%;
	top: 36%;
}

#myChart {
	/* margin-left: 21px; */
}

#about {
	background-color: rgb(20,53,72);
}

#about_img_cntr {
	position: absolute;
	left: 0%;
}

#services {
	background-color: rgb(255,255,255);
}

#services > div {
	padding: 50px 0;
}

#services #services_leading_txt {
	padding-top: 0;
	padding-bottom: 35px;
}

#services > #callout_cntr {
	padding-bottom: 0;
}

#contact {
	background-color: rgb(52,56,56);
	position: fixed;
	bottom: 84px;
	width: 100%;
}

#contact > .row {
	margin: 20px auto;
}

#social_cntr {
	margin-top: 80px;
	margin-bottom: 0;
}

#back_to_top {
	background-color: rgb(97,231,205);
	border-radius: 50%;
    position: fixed;
    bottom: 100px;
    right: 60px;
    width: 64px;
    z-index: 9;
    display: none;
}

/* Utility classes */
.animated-arrow {
	-webkit-animation-delay: 3s;
	-webkit-animation-iteration-count: infinite;
	-moz-animation-delay: 3s;
	-moz-animation-iteration-count: infinite;
	-o-animation-delay: 3s;
	-o-animation-iteration-count: infinite;
	animation-delay: 3s;
	animation-iteration-count: infinite;
}

.alt-fill {
	background-color: rgb(246,246,246);
}

.button.callout {
	border: rgb(255,107,99) 1px solid;
	margin: 1.25rem 0;
  	background-color: transparent;
  	color: rgb(255,107,99);
}

.button.callout:hover {
  	background-color: rgb(255,107,99);
}

.primary-color {
	color: rgb(51,153,204);
}

.secondary-color {
	color: rgb(255,107,99);
}

.alternate-color {
	color: rgb(97,231,205);
}

.light-color {
	color: rgb(255,255,255);
}

.round-icons {
	border-radius: 50%;
}

.bucket{
	position: relative;
	height: 752px;
	/* z-index: 1; */
}

/* Define mobile styles */
@media only screen and (max-width: 40em) {
	#landing #lead_options ul {
		max-width: 456px;
	}

	#landing #lead_options li {
		min-width: initial;
		padding-left: 10px;
	}

	#landing #lead_heading {
		font-size: 5.1rem;
	}
}

